# remastersys-vala

./: README.md  meson.build
data/: plymouth.ui  remastersys.glade  usersetting.ui
po/: POTFILES  en.po  remastersys.pot  zh_CN.po
src/: about_dialog.vala  main.vala  meson.build  plymouth.vala  user_setting.vala
